tests/type-errors/arith_div_tez_int.arl
archetype arith_div_tez_int

entry main () {
  effect {
    var v = 1tz / 1
  }
}
